TOP Viewファイル作成

--- a/app/assets/sass/_foundation/_variables.scss
+++ b/app/assets/sass/_foundation/_variables.scss
@@ -68,7 +68,7 @@ $glay-dark    : darken($glay, 25%);
 
 $chacoal      : #4b585c;
 $blue         : #125782;
-$blueLight    : #288FCF;
+$blueDark     : #35495e;
 $greenDark    :#397469;
 $green        : lighten($greenDark, 10%);
 $red          :#CF2728;
