実績一覧viewの作成

--- a/app/assets/sass/_foundation/_variables.scss
+++ b/app/assets/sass/_foundation/_variables.scss
@@ -63,7 +63,7 @@ $black        : #202020;
 $white        : #ffffff;
 $offWhite     : #f1f1f1;
 $glay         : #CCCCCC;
-$glay-l       : #dddddd;
+$glay-l       : #EEEEEE;
 $glay-dark    : darken($glay, 25%);
 
 $chacoal      : #4b585c;
