--- a/app/assets/sass/_layout/_header.scss
+++ b/app/assets/sass/_layout/_header.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  max-width: $contentsWidth;
+  max-width: $lg;
   margin: 0 auto;
   top: 2rem;
   left: 0;
