--- a/app/assets/sass/_layout/_navigation.scss
+++ b/app/assets/sass/_layout/_navigation.scss
@@ -25,7 +25,7 @@
         color: $mainColor;
       }
     }
-    & > .nuxt-link-active {
+    & > .nuxt-link-exact-active {
       color: $mainColor;
     }
   }
