Components - Btn--whiteのプロパティを追加

--- a/app/assets/sass/_object/_component/_btn.scss
+++ b/app/assets/sass/_object/_component/_btn.scss
@@ -17,7 +17,11 @@
 
     &--white {
       background-color: $white;
-      color: $keyColor;
+      color: $blueDark;
+      &:hover {
+        color: $white;
+        background-color: $blueDark;
+      }
     }
   &__wrap {
     text-align: center;
