--- a/app/assets/sass/pages/detail.scss
+++ b/app/assets/sass/pages/detail.scss
@@ -2,7 +2,7 @@
 @import "../_foundation/variables";
 @import "../_foundation/mediaqueries";
 
-.p-detail {
+.Detail {
 
   &__head {
     font-size: 1.5rem; // 24px
@@ -13,13 +13,7 @@
       font-size: 1.25rem;
     }
   }
-  &__inner {    
-    display: flex;
-    flex-direction: row;
-  }
-  &__contents {
-    width: 60%;
-  }
+
   &__info {
     display: flex;
     flex-direction: row;
@@ -39,37 +33,67 @@
       flex-direction: row;
     }
   }
-  &__images {
-    width: 40%;
-    padding-left: 15px;
-    >img {
-      box-shadow: 0 0 24px transparentize($glay, 0.86);
-    }
-  }
+
   &__date {
     margin-right: 10px;
   }
   &__paragraph {
     white-space: pre-wrap;
+    margin-bottom: 1rem;
     > a {
       text-decoration: underline;
     }
   }
-  .c-btn__wrap {
-    @include mq-max(xs) {
-      display: flex;
-      flex-direction: column-reverse;
-      margin-right: 0;
-      margin-left: 0;
-      .c-btn {
-        width: 100%;
+
+  &--row {
+    .Detail {
+      &__inner {
+        display: flex;
+        flex-direction: row;
+      }
+      &__contents {
+        width: 60%;
+      }
+      &__images {
+        width: 40%;
+        padding-left: 15px;
+        >img {
+          box-shadow: 0 0 24px transparentize($glay, 0.86);
+        }
       }
     }
   }
-  .c-btn--white {
-    margin-right: 10px;
+
+  &--col {
+    .Detail {
+      &__contents {
+        width: 100%;
+      }
+      &__inner {
+        display: flex;
+        flex-direction: column;
+      }
+      &__images {
+        > img {
+          border-radius: 1rem;
+          margin-bottom: 1rem;
+
+        }
+      }
+    }
+  }
+
+  .Btn__wrap {
     @include mq-max(xs) {
-      margin-right: 0;
+      display: flex;
+      flex-direction: column-reverse;
+      margin: 1rem 0;
+    }
+  }
+  .Btn--white {
+    margin: 1rem;
+    @include mq-max(xs) {
+      margin: 1rem 0 0;
     }
   }
 }
