--- a/app/assets/sass/_object/_project/p-card.scss
+++ b/app/assets/sass/_object/_project/p-card.scss
@@ -5,7 +5,7 @@
     cursor: pointer;
     width: 31%;
     margin-right: 3%;
-    margin-bottom: 50px;
+    margin-bottom: 3rem;
     box-shadow: 0 0 8px transparentize($black, 0.86);
     opacity: 1;
     background-color: $white;
@@ -40,13 +40,14 @@
   }
   &__title {
     font-size: 1.125rem;
+    font-weight: 700;
     margin-bottom: 0;
   }
   &__subtitle {
     margin-bottom: 0;
   }
   &__body {
-    padding: 10px;
+    padding: 1rem;
   }
   &__date {
     font-size: 0.825rem;
