--- a/app/assets/sass/_object/_project/p-card.scss
+++ b/app/assets/sass/_object/_project/p-card.scss
@@ -7,6 +7,8 @@
     margin-right: 3%;
     margin-bottom: 3rem;
     box-shadow: 0 0 8px transparentize($black, 0.86);
+    border-radius: 0.5rem;
+    overflow: hidden;
     opacity: 1;
     background-color: $white;
     transition: opacity $transition,
@@ -37,6 +39,11 @@
         margin-right: 0;
       }
     }
+  }
+  &__head {
+    margin: 0;
+    max-height: 53%;
+    background-color: $white;
   }
   &__title {
     font-size: 1.125rem;
